# ANN_cpp

./: .gitignore  Makefile  README.md
doc/: doxyfile
doc/html/: activationFunction_8hpp_source.html  annotated.html  classLayer-members.html  classLayer.html  classNetwork-members.html  classNetwork.html  classNode-members.html  classNode.html  classes.html  dataset_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_rela.html  graph_legend.html  index.html  layer_8hpp_source.html  menudata.js  network_8hpp_source.html  node_8hpp_source.html  parameter_8hpp_source.html  structactivation-members.html  structactivation.html  structdata-members.html  structdata.html  structdataset-members.html  structdataset.html  structdataset__coll__graph.map  structdataset__coll__graph.md5
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+8 more)
doc/latex/: annotated.tex  classLayer.tex  classNetwork.tex  classNode.tex  refman.tex  structactivation.tex  structdata.tex  structdataset.tex  structdataset__coll__graph.md5
src/: CMakeLists.txt  activationFunction.cpp  activationFunction.hpp  dataset.cpp  dataset.hpp  layer.cpp  layer.hpp  mainDebug.cpp  network.cpp  network.hpp  node.cpp  node.hpp  parameter.hpp
test/: CMakeLists.txt  activationFunction_t.cc  layer_t.cc  network_t.cc  node_t.cc  test.cc  test.cpp
